<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="fill_parent"
              android:layout_width="fill_parent">
              
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ADD8E6"
   >
    
     <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="45dp"
        android:text="@string/registration_description"
        android:textStyle="bold"
        />
    
    


    
    

     
      <!--  distanta margin_top intre edit text-uri este de 40 
            distanta margin_top intre text box-uri este de 40
      -->
 

      

        
        <TextView
        android:id="@+id/textViewEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="190dp"
        android:text="@string/email_address"
        android:textStyle="bold" />
        
         
       <EditText 
        android:id="@+id/txtEmaillAddress"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"  
        android:layout_marginLeft="150dp"
       
      />
        
        <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="230dp"
        android:text="@string/username"
        android:layout_below="@+id/txtEmaillAddress"
        android:textStyle="bold" />
        
        
         
       <EditText 
        android:id="@+id/txtUsername"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp"  
        android:layout_marginLeft="150dp"
       
      />
        
        <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="270dp"
        android:text="@string/password"
        android:layout_below="@+id/textViewUsername"
        android:textStyle="bold" />
        
        
         
       <EditText 
        android:id="@+id/txtPassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"  
        android:layout_marginLeft="150dp"
        android:inputType="textPassword"
       
      />
    
       <Button 
           android:id="@+id/btnRegister"
           android:layout_width="90dp"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignParentTop="true"
           android:layout_marginLeft="55dp"
           android:layout_marginTop="350dp"
           android:text="@string/sign_up_text"
           android:background="#FFFFCC"
           
           />
       
        <Button 
           android:id="@+id/btnCancel"
           android:layout_width="90dp"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignParentTop="true"
           android:layout_marginLeft="170dp"
           android:layout_marginTop="350dp"
           android:text="@string/cancel_register_text"
           android:background="#FFFFCC"
           
           />
       
</RelativeLayout>
</ScrollView>
